--- a/src/components/products.css
+++ b/src/components/products.css
@@ -206,7 +206,7 @@
 @media only screen and (min-width : 478px) and (max-width : 1024px) {
     #products-all-section {
         width: 100%;
-        display: flex;
+        /* display: flex; */
         gap: 1.5rem;
     }
 
@@ -223,8 +223,11 @@
 /* mobile responsive */
 @media only screen and (max-width : 478px) {
     #products-all-section {
-        display: flex;
-        justify-content: space-around;
+        width: 100%;
+        gap: 20px;
+        padding: 5px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     #filter-section {
